--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "element-ui": "^2.5.4",
+    "highcharts": "^7.0.3",
+    "lodash": "^4.17.11",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
   },
