--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "highcharts": "^7.0.3",
     "lodash": "^4.17.11",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.2"
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.0.2",
+    "vue-schart": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
